# b8

./: .gitignore  LICENSE  Makefile  README.md  b8.py  neohubby.py  pyproject.toml  setup.py
b8/: __init__.py  app.py  buffers.py  configs.py  files.py  logs.py  paths.py  service.py  terminals.py  ui.py  version.py  vim.py
bominade/: files.py  ui.py  vim.py
dev/: LICENSE  terminalschemer.py
dev/examples/: gvim.py
dev/www/: eleventyconfig.js
dev/www/src/: dev.md  faq.md  index.md  main.css.njk  manual.md
dev/www/src/_includes/: layout.njk  theme.css
tools/: pyproject.toml
tools/www/: .firebaserc  eleventyconfig.js  package-lock.json
tools/www/src/: bugs.md  community.md  config.md  dev.md  index.md  install.md
tools/www/src/_includes/: layout.njk  theme.css
